stateDiagram-v2
  [*] --> CREATED
  CREATED --> CONFIRMED: confirm
  CREATED --> CANCELED: cancel
  CONFIRMED --> ACCOUNTING_PROCESSING: startAccounting
  CONFIRMED --> CANCELED: cancelBeforeAccounting
  ACCOUNTING_PROCESSING --> ACCOUNTED: accountingSuccess
  ACCOUNTING_PROCESSING --> ACCOUNTING_FAILED: accountingFailed
  ACCOUNTING_PROCESSING --> UNKNOWN: accountingUnknown
  ACCOUNTING_FAILED --> ACCOUNTING_PROCESSING: retryAccounting
  UNKNOWN --> ACCOUNTED: queryAccountingSuccess
  UNKNOWN --> ACCOUNTING_FAILED: queryAccountingFailed
  ACCOUNTED --> [*]
  CANCELED --> [*]
